# ansible-role-talos-with-cilium

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  requirements.yml
molecule/docker/: cleanup.yml  converge.yml  molecule.yml  prepare.yml
molecule/tart/: converge.yml  create.yml  destroy.yml  molecule.yml  prepare.yml
roles/talos/: README.md
roles/talos/defaults/: main.yml
roles/talos/meta/: main.yml
roles/talos/tasks/: bootstrap_talos.yml  config_cilium_manifests.yml  config_talos.yml  config_workspace.yml  generate_cilium_manifests.yml  generate_inline_manifests_patch.yml  install.yml  main.yml  test_lb_connectivity.yml  uninstall.yml
roles/talos/templates/: cilium.l2announcement.yaml.j2  cilium.lbippool.yaml.j2  cilium.patch.j2  gatewayclass.yaml.j2  inline-manifest-patch.yaml.j2
