[tool.poetry]
name = "talos-for-tart"
version = "0.1.0"
description = ""
authors = ["Franck Labatut <franck.labatut@ubisoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.0.1"
molecule = {extras = ["docker"], version = "^24.6.0"}
kubernetes = "^30.1.0"
pre-commit = "^3.7.1"
ansible-lint = { version = "24.6.0", markers = 'platform_system != "Windows"' }
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
netaddr = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
